add test controller

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,6 +3,9 @@ logging:
     robert: DEBUG
 
 spring:
+  profiles:
+    active: dev
+
   datasource:
       tomcat:
         max-active: 12
@@ -10,4 +13,5 @@ spring:
 
 robert:
   user:
-    password: password
+    password: Passwd.123
+    username: test@t.pl
